--- a/04-flex-information/style.css
+++ b/04-flex-information/style.css
@@ -10,9 +10,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
-  display: flex;
-  justify-content: center;
-  padding: 32px;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
@@ -28,8 +26,15 @@ img {
   background: #eee;
 }
 
+body {
+  text-align: center;
+}
+
 .container {
   display: flex;
-  flex-wrap: wrap;
+  justify-content: center;
   gap: 52px;
+}
+.images {
+  max-width: 200px;
 }
